PR/50532: David Binderman: Add missing fclose.